# pklg

./: .gitmodules  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
src/pklg/: cli.py  editor.py  flows.py  kicad.py  values.py
src/pklg/distributors/: __init__.py  digikey.py  manual.py
tests/: test_digikey.py  test_values.py
tests/fixtures/: digikey_capacitor.json  digikey_inductor.json  digikey_resistor.json
