[project]
name = "pklg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "questionary>=2.1.1",
    "typer>=0.24.1",
    "whenever>=0.9.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.6",
    "ty>=0.0.23",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project.scripts]
pklg = "pklg.cli:app"
